--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.3",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -39,5 +38,13 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "overrides": {
+      "ng-lightning": {
+        "@angular/cdk@": "16.2.3",
+        "@angular/common@": "^16.0.0 || ^17.0.0",
+        "@angular/core@": "^16.0.0 || ^17.0.0",
+        "@angular/forms@": "^16.0.0 || ^17.0.0"
+      }
   }
 }
